# wiki2txt

./: .gitignore  README.md  pyproject.toml
wiki2txt/: __main__.py  constants.py  extract.py  helpers.py
