[project]
name = "wiki2txt"
version = "1.0.0"
description = ""
authors = [
    {name = "jrubioh = "jrubioh@pm.me"}
]
license = {text = "GLP-2"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "plumbum (>=1.9.0,<2.0.0)",
    "ply (>=3.11,<4.0)",
    "soupsieve (>=2.7,<3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "termcolor (>=3.1.0,<4.0.0)"
]

[tool.poetry.scripts]
wiki2txt="wiki2txt.__main__:main"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
